# django-app-router

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
django_app_router/: __init__.py  app_router.py  lazy_view.py  routers.py  utils.py  view_actions.py
example/: README.md  manage.py  requirements.txt
example/app_test/: apps.py  urls.py
example/app_test/routers/: page.html  page.py
example/app_test/routers/(auth)/register/: page.py
example/app_test/routers/info/: page.py
example/app_test/templates/: base.html  page.py
example/app_test/templates/(auth)/login/: page.html
example/app_test/templates/(group)/login/: page.py
example/app_test/templates/(group)/register/: page.html  page.py
example/app_test/templates/info/: page.py
example/app_test/templates/user/[user_id]/: page.html  page.py
example/project/: settings.py  urls.py
tests/: conftest.py  settings.py  test_lazy_view.py  test_routers.py  test_templates.py  test_urls.py  test_utils.py  test_view_actions.py  urls.py  views.py
tests/routers/: page.html  page.py
tests/routers/_test_ignore/: page.py
tests/routers/test_nested/: page.html
tests/routers/test_nested/test_nested_2/: page.html
tests/routers/test_slug/[slug]/: page.html  page.py
tests/routers/tests/test_app_dir/: page.html  page.py
tests/templates/(test_group)/about/: page.html  page.py
tests/templates/(test_group)/info/: page.html  page.py
tests/templates/test_nested/: page.py
tests/templates/test_nested/test_nested_2/: page.py
tests/templates/test_view_actions/: actions.py  page.html
